💄🐛 Fix scrollbar style alphaNumElementContainer

--- a/src/assets/styles/comparison-panel.module.css
+++ b/src/assets/styles/comparison-panel.module.css
@@ -103,6 +103,30 @@
 	min-width: 100%; */
 }
 
+@supports not (scrollbar-color: auto) {
+	.comparisonPanelContent
+		.alphaNumContainer
+		.alphaNumElementContainer::-webkit-scrollbar-track {
+		box-shadow: inset 0 0 60px rgba(0, 0, 0, 0.15);
+		background-color: unset;
+	}
+
+	.comparisonPanelContent
+		.alphaNumContainer
+		.alphaNumElementContainer::-webkit-scrollbar {
+		height: 0;
+		background-color: unset;
+	}
+
+	.comparisonPanelContent
+		.alphaNumContainer
+		.alphaNumElementContainer::-webkit-scrollbar-thumb {
+		height: 0;
+		border-radius: 0;
+		background-color: unset;
+	}
+}
+
 .comparisonPanelContent
 	.alphaNumContainer
 	.alphaNumElementContainer
