--- a/src/index.css
+++ b/src/index.css
@@ -143,7 +143,7 @@ body {
 
 @supports not (scrollbar-color: auto) {
 	*::-webkit-scrollbar-track {
-		-webkit-box-shadow: inset 0 0 60px rgba(0, 0, 0, 0.15);
+		box-shadow: inset 0 0 60px rgba(0, 0, 0, 0.15);
 		background-color: #f0f0f0;
 	}
 
